--- a/Dialog_Summarization_With_Finetuning_LLM.ipynb
+++ b/Dialog_Summarization_With_Finetuning_LLM.ipynb
@@ -1929,7 +1929,7 @@
         "id": "UzdQeFCZ7ZZB"
       },
       "source": [
-        "Both the full fine tuned model and the PEFT model did noticeably well than the original model. PEFT model results were slightly lesser than teh full filne tuned model but the results are still decent. The training time and computational resource intensity are quite lower than the full fine tuned model and outweighs the slight decrease in performance."
+        "Both the full fine tuned model and the PEFT model did noticeably well than the original model. PEFT model results were slightly lesser than the full fine tuned model but the results are still decent. The training time and computational resource intensity are quite lower than the full fine tuned model and outweighs the slight decrease in performance."
       ]
     },
     {
